--- a/client/public/index.html
+++ b/client/public/index.html
@@ -92,7 +92,7 @@
         <img src="/cdn-cgi/imagedelivery/s-dfVpmPR-aKHmwFNwAgnQ/erika-nztyhd877d.figweb.site-8290e26c535043d507536ec9f49014c463b5f0a8/w=70" width="70" height="70" alt="pen (1) 1" id="__18" fetchpriority="high" decoding="async">
       </div>
     </div>
-    <span id="_61_96"><span id="__19">NOTEBASE</span></span>
+    <span id="_61_96"><span id="__19">TechKnowledgeBase</span></span>
     <menu id="_59_118">
       <div id="_59_115">
       </div>
