--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React App</title>
+  <title>TechKnowledgeBase</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
