--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,11 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TechKnowledgeBase</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="../assets/styles/test.css">
+
 </head>
 
+mark
+
 <body>
-  <div id="root"></div>
+  <div id="MainWrapper">
+    <div id="MainWrapperInner">
+      <div id="root"></div>
+    </div>
+  </div>
 </body>
 
 </html>
