--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,11 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TechKnowledgeBase</title>
-  <link rel="stylesheet" href="../assets/styles/test.css">
+  <link rel="stylesheet" href="../src/assets/styles/index.css">
 
 </head>
-
-mark
 
 <body>
   <div id="MainWrapper">
