--- a/client/public/index - Backup.html
+++ b/client/public/index - Backup.html
@@ -11,7 +11,7 @@
     }
   </style>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Section 1</title>
+  <title>VORLAGE | offline</title>
   <link rel="canonical" href="https://erika-nztyhd877d.figweb.site/">
   <meta name="description" content="Created with figma.to.website">
   <meta property="og:url" content="https://erika-nztyhd877d.figweb.site/">
